<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cs160.calorieconverter.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="center_horizontal"
        android:text="@string/choose_exercise"
        android:id="@+id/Header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textSize="18dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exercise_spinner"
        android:entries="@array/reps_mins_Exercise"
        android:layout_below="@+id/Header"
        android:layout_alignEnd="@+id/Header"
        android:layout_marginTop="31dp"
        android:layout_toEndOf="@+id/congrats" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/calculate"
        android:id="@+id/calcBtn"
        android:layout_centerHorizontal="true"
        android:background="#e52828"
        android:textColor="#ffffff"
        android:layout_below="@+id/exercise_spinner" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/no_reps_mins"
        android:layout_alignBottom="@+id/exercise_spinner"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/exercise_spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:id="@+id/congrats"
        android:layout_above="@+id/separator"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numofCalories"
        android:id="@+id/numCalories"
        android:hint="0"
        android:layout_alignTop="@+id/congrats"
        android:layout_alignEnd="@+id/calcBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cal"
        android:id="@+id/cal"
        android:layout_alignTop="@+id/numCalories"
        android:layout_alignEnd="@+id/separator" />

    <View android:id="@+id/separator"
        android:background="#000000"
        android:layout_width = "fill_parent"
        android:layout_height="1dip"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converter"
        android:id="@+id/converter_header"
        android:textSize="20dp"
        android:layout_above="@+id/exercises"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:id="@+id/eq"
        android:textSize="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numofExercise"
        android:id="@+id/comparison"
        android:textSize="30dp"
        android:layout_alignTop="@+id/eq"
        android:layout_alignStart="@+id/converter_header" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exercises"
        android:layout_alignBottom="@+id/comparison"
        android:entries="@array/reps_mins_Exercise"
        android:layout_alignEnd="@+id/separator"
        android:layout_toEndOf="@+id/congrats" />


</RelativeLayout>
